--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,7 +4,7 @@
     "noEmit": false,
     "outDir": "dist",
     "allowImportingTsExtensions": false,
-    "rootDir": "src"
+    "rootDir": "api"
   },
     "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
